--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
       <button id="bass4Button" class="button">Bass 4</button>
     </div>
 </div>
+<div id='instructions'>To use the stem player, wait till stems are loaded, then hit play, and then begin clicking stems.</div>
 </body>
 </html>
